--- a/knockoutexample.html
+++ b/knockoutexample.html
@@ -27,9 +27,9 @@
   </head>
   <body>
     <div role="main" class="container">
-      <div class="row jumbotron">
+      <div class="row col-12 jumbotron">
         <!-- bind the div to the main template to output the current question -->
-        <div class="question row" data-bind="template: {name: 'question-template', data: question}">
+        <div class="question row col-12" data-bind="template: {name: 'question-template', data: question}">
 
         </div>
       </div>
@@ -80,21 +80,21 @@
     <script type="text/html" id="question-template">
       <!-- bind the question text -->
       <div class="row col-12" data-bind="text: question"></div>
-      <div class="row">
-        <div class="col">
         <!-- bind the answer template to the unordered list, and bind to the answers -->
-        <ul data-bind="template: {name: 'answer-template', foreach: answers}"></ul>
-      </div>
+        <div class="row col-12" data-bind="template: {name: 'answer-template', foreach: answers}">
+        </div>
       </div>
     </script>
 
     <!-- Template to display answers -->
     <script type="text/html" id="answer-template">
-      <li>
-          <!-- data bind the attributes to properties on the answer, checked binding back to the selected answer for the question-->
-          <input type="radio" name="answer" data-bind="attr:{id: 'answer'+id, value: id}, checked:$parent.userAnswerId" />
-          <span data-bind="text: answer">
-      </li>
+      <div class="row col-12">
+          <div class="col-1">
+            <!-- data bind the attributes to properties on the answer, checked binding back to the selected answer for the question-->
+            <input type="radio" name="answer" data-bind="attr:{id: 'answer'+id, value: id}, checked:$parent.userAnswerId" />
+          </div>
+          <div class="col-11" data-bind="html: answer"></div>
+        </div>
     </script>
   </body>
 </html>
