--- a/knockoutexample.html
+++ b/knockoutexample.html
@@ -31,6 +31,13 @@
         text-align: left !important;
         margin-bottom: 0 !important;
       }
+      .selectedAnswer{
+        background-color: green !important;
+        border-color: green !important;
+      }
+      .selectedAnswer:hover{
+        background-color: lightgreen !important;
+      }
     </style>
   </head>
   <body>
@@ -81,6 +88,9 @@
 
       });
 
+      function saveAnswer(answer){
+        questionViewModel.question(quizModule.setAnswer(answer.id));
+      }
 
 
     </script>
@@ -120,7 +130,7 @@
 
     <script type="text/html" id="answer-button-template">
       <div class="row col-12 row--top--buffer">
-        <button class="btn btn-primary btn-block answer" data-bind="html:answer,attr:{id: 'answer'+id}"></button>
+        <button class="btn btn-primary btn-block answer" data-bind="html:answer,attr:{id: 'answer'+id}, click:saveAnswer, css:{selectedAnswer:$parent.userAnswerId===id}"></button>
       </div>
     </script>
 
