--- a/knockoutexample.html
+++ b/knockoutexample.html
@@ -34,6 +34,9 @@
         text-align: left !important;
         margin-bottom: 0 !important;
       }
+      .answer{
+        text-align: left !important;
+      }
       .selectedAnswer{
         background-color: green !important;
         border-color: green !important;
