Fix list example

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <script type="text/html" id="question-list-template">
       <!-- bind the question text -->
-      <div class="row col-12 row--top--buffer" data-bind="text: question"></div>
+      <div class="row col-12 row--top--buffer" data-bind="html: question"></div>
     </script>
 
     <!-- Template to display answers -->
