--- a/index-styled.html
+++ b/index-styled.html
@@ -18,9 +18,13 @@
     <meta http-equiv="Content-Language" content="en">
     <title>JavaScript Quiz</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+          crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style-adam.css">
 
   </head>
   <body>
@@ -39,32 +43,80 @@
     </header>
 
     <main role="main">
-      <div class="container">
+      <div class="container padding center">
+
         <div class="row col-12">
-            <!-- bind the div to the main template to output the current question -->
-            <h5>Example of displaying answers and using radio buttons for selection</h5>
-            <div class="question row col-12">
-              <div class="row col-12" data-bind="template: {name: 'question-template', data: question}">
-
-              </div>
-              <p style="margin-top:1.5rem;">
-                <button id="btnNext" class="btn btn-primary">Next</button>
-                <button id="btnBack" class="btn btn-secondary">Previous</button>
-              </p>
-            </div>
-
-
             <h5 class="space">Example of displaying the answers as buttons</h5>
             <div class="question row col-12" data-bind="template: {name: 'question-button-template', data: question}">
-
             </div>
+
 
             <!-- bind the div to the list on the viewmodel and output the array using foreach -->
-            <h5 class="space">Example of listing the questions for review or navigation</h5>
+            <!--<h5 class="space">Example of listing the questions for review or navigation</h5>
             <div class="question row col-12" data-bind="template: {name: 'question-list-template', foreach: list}">
 
+            </div>-->
+        </div>
+
+  <div class="container-fluid padding" id="developed-by">
+    <hr>
+    <div class="row welcome text-center">
+      <div class="col-12">
+        <h3 class="display-5">Developed By</h3>
+      </div>
+    </div>
+  </div>
+      <div class="container-fluid padding">
+          <div class="row text-center padding">
+              <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <h3>Reva Baumann</h3>
+              </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+
+                <h3>Lance Desrouleaux</h3>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+
+                <h3>Adam Donner</h3>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <h3>Troy Martin</h3>
             </div>
           </div>
+      </div>
+
+
+
+    <div class="container-fluid padding" id="developed-using">
+        <hr>
+        <div class="row welcome text-center">
+          <div class="col-12">
+            <h3 class="display-5">Developed Using</h3>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid padding">
+          <div class="row text-center padding">
+              <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <i class="fab fa-js"></i>
+                <h3>JavaScript</h3>
+              </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <i class="fab fa-html5"></i>
+                <h3>HTML5</h3>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <i class="fab fa-css3"></i>
+                <h3>CSS3</h3>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <i class="fab fa-bootstrap"></i>
+                <h3>Bootstrap</h3>
+            </div>
+          </div>
+      </div>
+
+
 
       </div>
     </main>
@@ -134,20 +186,12 @@
 
 
     <!-- main template for the question -->
-    <script type="text/html" id="question-template">
-      <!-- bind the question text -->
-      <div class="row col-12" data-bind="html: question"></div>
-        <!-- bind the answer template to the unordered list, and bind to the answers -->
-        <div class="row col-12" data-bind="template: {name: 'answer-template', foreach: answers}"></div>
-      </div>
-    </script>
 
     <script type="text/html" id="question-button-template">
       <!-- bind the question text -->
-      <div class="row col-12" data-bind="html: question"></div>
+      <div class="jumbotron text-center" id="question-ask" data-bind="html: question"></div>
         <!-- bind the answer template to the unordered list, and bind to the answers -->
         <div class="row col-12" data-bind="template: {name: 'answer-button-template', foreach: answers}"></div>
-      </div>
     </script>
 
     <script type="text/html" id="question-list-template">
@@ -156,26 +200,17 @@
     </script>
 
     <!-- Template to display answers -->
-    <script type="text/html" id="answer-template">
-      <div class="row col-12">
-        <div class="col-1">
-          <!-- data bind the attributes to properties on the answer, checked binding back to the selected answer for the question-->
-          <input type="radio" name="answer" data-bind="attr:{id: 'answer'+id, value: id}, checked:$parent.userAnswerId" />
-        </div>
-        <div class="col-11" data-bind="html: answer"></div>
-      </div>
-    </script>
 
     <script type="text/html" id="answer-button-template">
-      <div class="row col-12 row--top--buffer">
+      <div class="row col-xs-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 row--top--buffer padding" id="answer-button-grid">
         <!-- data bind the html, attributes and css and the click event css, will add class selectedAnswer if answer is the previously selected user answer for the question-->
-        <button class="btn btn-primary btn-block answer" data-bind="html:answer, attr:{id: 'answer'+id}, click:saveAnswer, css:{selectedAnswer:$parent.userAnswerId===id}"></button>
+        <button class="btn btn-secondary btn-block answer" data-bind="html:answer, attr:{id: 'answer'+id}, click:saveAnswer, css:{selectedAnswer:$parent.userAnswerId===id}"></button>
       </div>
     </script>
 
     <script type="text/html" id="question-nav-template">
       <li class="nav-item" data-bind="css:{active:($root.currentQuestion()===$index())}">
-        <a class="nav-link" href="javascript:void();" data-bind="html:`Q`+($index() + 1)" ></a>
+        <a class="nav-link" href="javascript:void();" data-bind="html:`Question `+($index() + 1)" ></a>
       </li>
     </script>
 
