Updated styles and layouts

--- a/index-styled.html
+++ b/index-styled.html
@@ -42,13 +42,10 @@
       </nav>
     </header>
 
-    <main role="main">
-      <div class="container padding center">
+    <div class="container-fluid padding center" role="main">
+      <br> <br>
 
-        <div class="row col-12">
-            <h5 class="space">Example of displaying the answers as buttons</h5>
             <div class="question row col-12" data-bind="template: {name: 'question-button-template', data: question}">
-            </div>
 
 
             <!-- bind the div to the list on the viewmodel and output the array using foreach -->
@@ -57,30 +54,28 @@
 
             </div>-->
         </div>
+    </div>
 
+  <footer class=" container-fluid">
   <div class="container-fluid padding" id="developed-by">
     <hr>
     <div class="row welcome text-center">
       <div class="col-12">
-        <h3 class="display-5">Developed By</h3>
+        <p>Developed By</p>
       </div>
     </div>
-  </div>
-      <div class="container-fluid padding">
           <div class="row text-center padding">
               <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <h3>Reva Baumann</h3>
+                <p>Reva Baumann</p>
               </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-
-                <h3>Lance Desrouleaux</h3>
+                <p>Lance Desrouleaux</p>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-
-                <h3>Adam Donner</h3>
+                <p>Adam Donner</p>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <h3>Troy Martin</h3>
+                <p>Troy Martin</p>
             </div>
           </div>
       </div>
@@ -91,31 +86,29 @@
         <hr>
         <div class="row welcome text-center">
           <div class="col-12">
-            <h3 class="display-5">Developed Using</h3>
+            <h4>Developed Using</h4>
           </div>
         </div>
-      </div>
-      <div class="container-fluid padding">
           <div class="row text-center padding">
               <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <i class="fab fa-js"></i>
-                <h3>JavaScript</h3>
+                <h5>JavaScript</h5>
               </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <i class="fab fa-html5"></i>
-                <h3>HTML5</h3>
+                <h5>HTML5</h5>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <i class="fab fa-css3"></i>
-                <h3>CSS3</h3>
+                <h5>CSS3</h5>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <i class="fab fa-bootstrap"></i>
-                <h3>Bootstrap</h3>
+                <h5>Bootstrap</h5>
             </div>
           </div>
       </div>
-
+    </footer>
 
 
       </div>
